Extract last connection partial to body to fix style overlap issue

--- a/app/assets/stylesheets/shared/custom_bootstrap.scss
+++ b/app/assets/stylesheets/shared/custom_bootstrap.scss
@@ -115,7 +115,6 @@ body {
     ::placeholder { color: #ccc; }
   }
 
-  .modal { z-index: 99999 };
   .modal-dialog {
     .modal-header {
       border-bottom: none;
